added contact form

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="terms.html">Terms & Conditions</a>
                 <a href="about.html">About PlantBeat</a>
+                <a href="contact.html">Contact Support</a>
             </div>
             <p class="copyright">© 2025 Caffeinated Software LLC. All rights reserved.</p>
         </footer>
