--- a/contact.html
+++ b/contact.html
@@ -587,7 +587,9 @@
                 const response = await fetch('https://xvnlxsawllvyrorrrxki.supabase.co/functions/v1/contact-form', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2bmx4c2F3bGx2eXJvcnJyeGtpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MjA4MzAsImV4cCI6MjA2MjI5NjgzMH0.04BCwHZ-Oz_SCr5_ApoPn1ZY2DYqADIJgsCgiZuBOXU',
+                        'apikey': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2bmx4c2F3bGx2eXJvcnJyeGtpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MjA4MzAsImV4cCI6MjA2MjI5NjgzMH0.04BCwHZ-Oz_SCr5_ApoPn1ZY2DYqADIJgsCgiZuBOXU'
                     },
                     body: JSON.stringify(data)
                 });
