--- a/contact.html
+++ b/contact.html
@@ -583,15 +583,29 @@
             };
             
             try {
-                // Send to Supabase Edge Function
-                const response = await fetch('https://xvnlxsawllvyrorrrxki.supabase.co/functions/v1/contact-form', {
+                // Call Supabase RPC function directly
+                const response = await fetch('https://xvnlxsawllvyrorrrxki.supabase.co/rest/v1/rpc/submit_contact_form', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2bmx4c2F3bGx2eXJvcnJyeGtpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MjA4MzAsImV4cCI6MjA2MjI5NjgzMH0.04BCwHZ-Oz_SCr5_ApoPn1ZY2DYqADIJgsCgiZuBOXU',
-                        'apikey': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2bmx4c2F3bGx2eXJvcnJyeGtpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MjA4MzAsImV4cCI6MjA2MjI5NjgzMH0.04BCwHZ-Oz_SCr5_ApoPn1ZY2DYqADIJgsCgiZuBOXU'
+                        'apikey': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2bmx4c2F3bGx2eXJvcnJyeGtpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MjA4MzAsImV4cCI6MjA2MjI5NjgzMH0.04BCwHZ-Oz_SCr5_ApoPn1ZY2DYqADIJgsCgiZuBOXU',
+                        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2bmx4c2F3bGx2eXJvcnJyeGtpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MjA4MzAsImV4cCI6MjA2MjI5NjgzMH0.04BCwHZ-Oz_SCr5_ApoPn1ZY2DYqADIJgsCgiZuBOXU'
                     },
-                    body: JSON.stringify(data)
+                    body: JSON.stringify({
+                        p_name: data.name,
+                        p_email: data.email,
+                        p_phone: data.phone,
+                        p_category: data.category,
+                        p_subject: data.subject,
+                        p_message: data.message,
+                        p_priority: data.priority,
+                        p_app_version: data.app_version,
+                        p_device_model: data.device_model,
+                        p_newsletter_optin: data.newsletter_optin,
+                        p_source: data.source,
+                        p_user_agent: data.user_agent,
+                        p_referrer: data.referrer
+                    })
                 });
                 
                 const result = await response.json();
